--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-calendars": "^1.1284.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
@@ -29,6 +30,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.67.6",
+    "@types/react-native-calendars": "^1.1264.3",
     "@types/styled-components-react-native": "^5.1.3",
     "react-native-svg-transformer": "^1.0.0",
     "typescript": "~4.3.5"
